<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_expense"
            android:icon="@drawable/exp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/inc"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_Statistics"
            android:icon="@drawable/cha"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/tip"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_calculate"
            android:icon="@drawable/cal"
            android:title="@string/menu_calculate" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/not"
            android:title="@string/menu_share" />
    </group>

    <item android:title="How To Use">
        <menu>

            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/help"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
